--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/anami-sf/first-express#readme",
   "dependencies": {
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "install": "^0.13.0"
   },
